--- a/Eventify/Views/Shared/_LandingLayout.cshtml
+++ b/Eventify/Views/Shared/_LandingLayout.cshtml
@@ -49,8 +49,8 @@
                             <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
                         </svg>
                     </button>
-                    <a href="@Url.Action("Index", "Login")" class="btn btn-outline-secondary btn-sm">Login</a>
-                    <a href="@Url.Action("Index", "Signup")" class="btn btn-primary btn-sm glow-button">Get Started</a>
+                    <a href="@Url.Action("Login", "Account")" class="btn btn-outline-secondary btn-sm">Login</a>
+                    <a href="@Url.Action("Signup", "Account")" class="btn btn-primary btn-sm glow-button">Get Started</a>
                 </div>
             </div>
         </div>
