--- a/Eventify/Views/Landing/Index.cshtml
+++ b/Eventify/Views/Landing/Index.cshtml
@@ -29,7 +29,7 @@
 
                 <!-- CTA Buttons -->
                 <div class="d-flex flex-column flex-sm-row gap-3 justify-content-center mb-5">
-                    <a href="/Signup" class="btn btn-primary btn-lg px-4 glow-button">Get Started</a>
+                    <a href="account/signup" class="btn btn-primary btn-lg px-4 glow-button">Get Started</a>
                     <a href="#how-it-works" class="btn btn-outline-primary btn-lg px-4">See How It Works</a>
                 </div>
 
