--- a/Eventify/Views/Shared/_Header.cshtml
+++ b/Eventify/Views/Shared/_Header.cshtml
@@ -1,6 +1,6 @@
 ﻿<header class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top">
     <div class="container-lg">
-        <a class="navbar-brand fw-bold fs-4" href="@Url.Action("Index", "landing")">
+        <a class="navbar-brand fw-bold fs-4" href="@Url.Action("Index", "Home")">
             <i class="fas fa-calendar fs-4 text-primary"></i>
             Eventify
         </a>
@@ -45,16 +45,24 @@
                 </button>
                 
                 <!-- Profile Dropdown -->
-                <div class="dropdown">
-                    <button class="btn btn-ghost dropdown-toggle" type="button" data-bs-toggle="dropdown">
-                        <i class="fas fa-user-circle fs-5"></i>
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="@Url.Action("Index", "Profile")">My Profile</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Logout</a></li>
-                    </ul>
-                </div>
+                    @if (User.Identity!.IsAuthenticated)
+                    {
+                        <div class="dropdown">
+                            <button class="btn btn-ghost dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                                <i class="fas fa-user-circle fs-5"></i>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                <li><a class="dropdown-item" href="@Url.Action("Index", "Profile")">My Profile</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="@Url.Action("Logout","Account")">Logout</a></li>
+                            </ul>
+                        </div>
+                    }
+                    else
+                    {
+                        <a href="@Url.Action("Login", "Account")" class="btn btn-outline-secondary btn-sm">Login</a>
+                        <a href="@Url.Action("Signup", "Account")" class="btn btn-primary btn-sm glow-button">Get Started</a>
+                    }
             </div>
         </div>
     </div>
