--- a/Eventify/Views/Shared/_SignLayout.cshtml
+++ b/Eventify/Views/Shared/_SignLayout.cshtml
@@ -24,5 +24,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="~/js/site.js"></script>
+
+    <!---دي البط اللي ضايفها علشان يشغل التسجيل-->
+    @RenderSection("AccountErrors", required: false)
 </body>
 </html>
