--- a/Eventify/Views/Shared/_PersonalEventCard.cshtml
+++ b/Eventify/Views/Shared/_PersonalEventCard.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="col-md-6 col-lg-4">
+﻿@* <div class="col-md-6 col-lg-4">
     <div class="card border-0 shadow-sm">
         <img src="~/images/event2.jpg" class="card-img-top img-hover" alt="Summer Music Festival">
         <div class="card-body">
@@ -15,4 +15,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> *@
