--- a/Eventify/Views/_ViewImports.cshtml
+++ b/Eventify/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using Eventify
 @using Eventify.Models
+@using Eventify.ViewModels
+@using Eventify.ViewModels.EventVM
+@using Eventify.ViewModels.VenueVM
+@using Eventify.Models.Enums
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
