--- a/Eventify/Views/Shared/_PersonalVenueCard.cshtml
+++ b/Eventify/Views/Shared/_PersonalVenueCard.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="col-md-6 col-lg-4">
+﻿@* <div class="col-md-6 col-lg-4">
     <div class="card border-0 shadow-sm">
         <img src="~/images/venue1.jpg" class="card-img-top img-hover" alt="Grand Ballroom Palace">
         <div class="card-body">
@@ -15,4 +15,4 @@
         </div>
     </div>
 </div>
-
+ *@
